20140904
========

- #18210 - Delegate to HBase simple fields projections.
- Contains and iscointained operators are no longer delegated to HBase following proddev team advice. 

20140821
========

- #15683 - Add authentication artifacts for kerberized Hadoop clusters.


20140805
========
- Add #17877: Allow projection of only rowkey in HBase


20140721
========
- AND and OR conditions: check that simple conditions forming the complex conditions are not null
  In Redmine -> #17753: HBase wrapper not returning results in query with start row and stop rowFix.


20140716
========
- Avoid the need of CREATE permission for table read
- Add #15709: Update version of Hadoop libraries (v2.4.0)


20131120
========
- Added delegation of operators ISTRUE and ISFALSE to HBase.
- Fixed problems in byte-level comparisons of data of type other than String. 


20131114
========
- Added possibility to enable cache in HBase scan operations.
- Fixed bad retrieval of data of (byte-array-simulated) type "long".
- Added contextual information to parameters during base view creation.


20131104
========
- Fixed is_null and is_not_null operators not working OK.
- Added HBase query specification output through the VDP log and query execution trace.
- Removed delegation of operators GE, GT, LE, LT to HBase due to the lack of a suitable
  comparator in HBase default installations.


20131025
========
- Improved delegation of the StartRow and StopRow parameters for better performance. 
- Added delegation of operators GE, GT, LE, LT to HBase.

 
20131021
========
- Fixed returning result when a query by rowkey is empty, and comments log added


20131018
========
- Fixed escaping of special characters in LIKE operations, in order to correctly 
  generate an equivalent regular expression.


20131009
========
- Fixed 'let' filter by row_key